--- a/Gym_Freak/frontend/templates/frontend/index.html
+++ b/Gym_Freak/frontend/templates/frontend/index.html
@@ -18,6 +18,8 @@
   
 </head>
 <body>
+  <div id="app"></div>
+    <script src="{% static 'frontend/components/App.js' %}"></script>
     <header class="header">
         <nav class="navbar">
           <div class="logo">
@@ -280,6 +282,6 @@
           </div>
         </div>
       </footer>
-    <script src="{%static "frontend/main.js"}"></script>
+    
 </body>
 </html>
