--- a/Gym_Freak/frontend/templates/frontend/index.html
+++ b/Gym_Freak/frontend/templates/frontend/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div id="app"></div>
-    <script src="{% static 'frontend/components/App.js' %}"></script>
+  <script type="module" src="{% static 'frontend/components/App.js' %}"></script>
     <header class="header">
         <nav class="navbar">
           <div class="logo">
