--- a/Gym_Freak/frontend/templates/frontend/index.html
+++ b/Gym_Freak/frontend/templates/frontend/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,19 +9,12 @@
     <meta name="author" content="GymFreak" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     {% load static %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
-    <script type="module" src="{% static 'frontend/components/Workoutpost.js/components/HomePage.js' %}"></script>
-    <script type="module" src="{% static 'frontend/components/Workoutpost.js' %}"></script>
-
-
-  
 </head>
+
 <body>
   <div id="app"></div>
     <header class="header">
@@ -31,7 +25,7 @@
           <div class="nav-links" id="navLinks">
             <ul>
               <li><a href="#home" class="nav-link">Home</a></li>
-              <li><a href="#about" class="nav-link">About</a></li>
+              <li><a href="#about" class="nav-link">Workout</a></li>
               <li><a href="#features" class="nav-link">Features</a></li>
               <li><a href="#faq" class="nav-link">FAQ</a></li>
             </ul>
@@ -285,6 +279,7 @@
           </div>
         </div>
       </footer>
-    
+
+      <script src="{% static 'frontend/main.js' %}"></script>
 </body>
 </html>
