--- a/Gym_Freak/frontend/templates/frontend/workout_track.html
+++ b/Gym_Freak/frontend/templates/frontend/workout_track.html
@@ -15,9 +15,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
     <link rel="stylesheet" type="text/css" href="{% static 'css/workout_track.css' %}">
-    <script type="module" src="{% static 'frontend/components/Workoutpost.js' %}"></script>
+    
 </head>
 <body>
+    <div id="app">
     <header class="header">
         <nav class="navbar">
           <div class="logo">
@@ -221,6 +222,6 @@
   
     </div>
   
-    <script src="app.js"></script>
+    <script src="{% static 'frontend/main.js' %}"></script>
   </body>
   </html>
