--- a/Gym_Freak/frontend/templates/frontend/bakups/index.html
+++ b/Gym_Freak/frontend/templates/frontend/bakups/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
   
 <head>
@@ -8,11 +8,11 @@
     <meta name="description" content="GymFreak - Track workouts, connect with trainers, and achieve your fitness goals" />
     <meta name="author" content="GymFreak" />
     <meta property="og:image" content="/og-image.png" />
-    <link rel="stylesheets" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap">
     {% load static %}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <link rel="stylesheets" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
-    <link rel="stylesheets" type="text/css" href="{% static 'css/index.css' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
 
 <body>
@@ -281,4 +281,4 @@
 
       <script src="{% static 'frontend/main.js' %}"></script>
 </body>
-</html>
+</html> {% endcomment %}
