--- a/Gym_Freak/frontend/templates/frontend/bakups/workout_track.html
+++ b/Gym_Freak/frontend/templates/frontend/bakups/workout_track.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,7 +36,7 @@
                 <span class="sun">☀️</span>
                 <span class="moon">🌙</span>
               </button>
-              {% comment %} <a href="#signup" class="btn btn-primary">Login</a> {% endcomment %}
+              
           </div>
           <div class="hamburger" id="hamburger">
             <span></span>
@@ -149,4 +149,4 @@
       <script src="{% static 'frontend/main.js' %}"></script>
       
   </body>
-</html>
+</html> {% endcomment %}
